--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- navbar starts here -->
     <div class="navbar">
         <div class="nav-logo col-2">
-            <img class="img" src="image/me.jpg" alt="Me">
+            <img class="img" src="Image/me.jpg" alt="Me">
         </div>
         <div class="nav-heading col-4">
             <h1>Mohidul Islam</h1>
@@ -37,12 +37,12 @@
     <!-- profile starts from here -->
 
     <div class="profile">
-        <img  class="weather1"src="image/weather.png" alt="weather">
+        <img  class="weather1"src="Image/weather.png" alt="weather">
         <div class="profile-desc">
             <h1>Wecome Everyone</h1>
             <p>Hi I am Mohidul Islam. This is my first portfolio design for web development. </p>
         </div>
-        <img class="weather2" src="image/weather.png" alt="waether-icon">
+        <img class="weather2" src="Image/weather.png" alt="waether-icon">
     </div>
     <!-- about me starts here -->
 
